--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,8 +1,19 @@
 {
 	"useTabs": true,
+	"tabWidth": 2,
+	"semi": true,
 	"singleQuote": true,
 	"trailingComma": "none",
 	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte"],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"plugins": [
+		"prettier-plugin-svelte"
+	],
+	"overrides": [
+		{
+			"files": "*.svelte",
+			"options": {
+				"parser": "svelte"
+			}
+		}
+	]
 }
