--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,5 +24,11 @@
 		"svelte": "^4.2.7",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@wagmi/connectors": "^5.1.7",
+		"@wagmi/core": "^2.13.4",
+		"svelte-wagmi": "^1.0.7",
+		"viem": "^2.19.9"
+	}
 }
