--- a/.github/workflows/publish-fe-ghcr.yml
+++ b/.github/workflows/publish-fe-ghcr.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Log into ghcr
         uses: docker/login-action@v2
@@ -23,8 +23,8 @@ jobs:
       - name: Build docker image
         run: |
           cd frontend
-          docker build 
-            --build-arg PUBLIC_WALLET_CONNECT_ID=${{ secrets.PUBLIC_WALLET_CONNECT_ID}} 
-            --build-arg DB_PATH=${{ secrets.DB_PATH }} 
+          docker build \
+            --build-arg PUBLIC_WALLET_CONNECT_ID=${{ secrets.PUBLIC_WALLET_CONNECT_ID}} \
+            --build-arg DB_PATH=${{ secrets.DB_PATH }} \
             --build-arg SEPOLIA_RPC_URL=${{ secrets.SEPOLIA_RPC_URL }} -t ghcr.io/MGM103/go-fund-yourself-fe:latest .
-          docker push ghcr.io/MGM103/go-fund-yourself:latest
+          docker push ghcr.io/MGM103/go-fund-yourself-fe:latest
