--- a/.github/workflows/publish-fe-ghcr.yml
+++ b/.github/workflows/publish-fe-ghcr.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           registry: ghcr.io
           username: MGM103
-          token: ${{ secrets.GH_TOKEN }}
+          password: ${{ secrets.GH_TOKEN }}
 
       - name: Build docker image
         run: |
