--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -1,10 +1,7 @@
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    env_file:
-      - .env
+  server:
+    image: ghcr.io/mgm103/go-fund-yourself-fe:latest
+    container_name: go-fund-yourself-fe
     ports:
       - '3000:3000'
     volumes:
