moving origin env val to docker-compose

--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     container_name: go-fund-yourself-fe
     ports:
       - '3000:3000'
+    environment:
+      - origin=http://gofundyourself.cash:3000
     volumes:
       - sqlite-data:/app/data
 
